fix: Bad or obnoxious text contrasts after BS5:
- Active tab text color
- Unread conversation text color
- Own message background color

Fixes #362

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -299,7 +299,7 @@
 }
 
 .message-own {
-  background-color: rgba($gray-200, 0.3);
+  background-color: rgba($gray-300, 0.7);
 }
 
 .message-warn {
