--- a/scss/themes/_chat.scss
+++ b/scss/themes/_chat.scss
@@ -69,7 +69,7 @@
   &:focus {
     color: color-contrast($danger-bg-subtle);
   }
-  color: color-contrast($danger-bg-subtle);
+  color: inherit;
 }
 
 .list-group-action.list-group-item {
