--- a/scss/themes/chat/dracula.scss
+++ b/scss/themes/chat/dracula.scss
@@ -78,7 +78,7 @@ $genders: (
 }
 
 .message-own:not(.message-warn) {
-  background-color: rgba($gray-200, 0.3);
+  background-color: rgba($gray-300, 0.7);
 }
 
 .colorblindMode {
