--- a/scss/themes/chat/mars.scss
+++ b/scss/themes/chat/mars.scss
@@ -37,7 +37,7 @@ body,
 }
 
 .message-own:not(.message-warn) {
-  background-color: rgba($gray-200, 0.75);
+  background-color: rgba($gray-300, 0.75);
 }
 
 * {
