--- a/scss/themes/chat/peached.scss
+++ b/scss/themes/chat/peached.scss
@@ -31,7 +31,7 @@ body,
 }
 
 .message-own:not(.message-warn) {
-  background-color: rgba($gray-200, 0.3);
+  background-color: rgba($gray-300, 0.7);
 }
 #window-tabs .nav-tabs .nav-link.active {
   background-color: #efddd6;
