--- a/scss/themes/chat/wilted-rose.scss
+++ b/scss/themes/chat/wilted-rose.scss
@@ -35,7 +35,7 @@ body,
 }
 
 .message-own:not(.message-warn) {
-  background-color: rgba($gray-200, 0.3);
+  background-color: rgba($gray-300, 0.7);
 }
 
 .list-group-item-danger {
